--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class="bg-slate-100 dark:bg-slate-900">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
